Building NetBeans throws a lot of deprecated warnings..
One of those deprecated warnings is "getURL() in FileObject has been deprecated".
This work is simply to remove these warnings and make the build less noisy.